<resources>
    <string name="app_name">Device Checker 设备检测器</string>
    <string name="exit_tips">确定要退出吗？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="main_menu_about">关于</string>
    <string name="title_about">关于</string>
    <string name="app_about">
        	每次买手机的时候心里都是忐忑不安的，人品再好也挡不住奸商的忽悠。要是能有一款软件可以在购机或者购机后第一时间对手机的各种硬件做测试那就放心多了。
        	\r\n\Device Checker是新一代的系统硬件检测工具。它能轻松检测电脑硬件的健康状态，让您购买爱机时少上当，不怕忽悠！
        	\r\n\r\n任务列表式的操作方式，简单，快捷，赶快体验一下吧！
        	\r\n\r\n有了Device Checker，再也不用担心买水货手机了，哪里有问题点哪里！</string>
    <string name="app_feedback">\r\n问题反馈请联系 kevinems@gmail.com</string>
    <string name="about_log_title">\r\n\r\n更新日志：</string>
    <string name="about_log_content">
        \r\n\r\nV1.02 添加［NFC测试］，美化界面，修正BUG。
        \r\n\r\nV1.01 修正BUG。
        \r\n\r\nV1.00 发布版本。</string>
    <string name="test_lcd">Lcd测试</string>
    <string name="next_tips">点击屏幕进入下一步</string>
    <string name="test_led">Led测试</string>
    <string name="test_led_notice">按电源键关闭屏幕，Led灯闪烁即为合格\r\n\r\n一些刷了第三方ROM，有Led灯增强控制功能的机器可能会导致在此测试单元Led灯不会亮起，不用担心，直接跳过</string>
    <string name="test_camera_tips">按菜单键切换摄像头</string>
    <string name="camera_alert">该设备只有一个摄像头</string>
    <string name="switch_cam">切换摄像头</string>
    <string name="test_touch_screen">触摸屏测试</string>
    <string name="video_tip">1.检测喇叭发音是否正常。\r\n2.插入耳机，检测耳机发音是否正常。</string>
    <string name="test_nfc">NFC测试</string>
    <string name="open_nfc">打开NFC</string>
    <string name="test_nfc_tips">1.先确保已经在系统设置里面打开NFC检测功能\r\n2.将公交卡等放在手机背面进行检测</string>
    <string name="test_nfc_tips_ok">已检测到NFC设备</string>
    <string name="test_audio_video">音视频测试</string>
    <string name="test_record">录音测试</string>
    <string name="test_compass">指南针测试</string>
    <string name="direction_north">北</string>
    <string name="start_test">开始测试</string>
    <string name="see_log">查看测试结果</string>
    <string name="test_notice">测试需知:\r\n绿色代表该项合格,红色代笔不合格,灰色代表还没有测试,白色代表当前测试项.</string>
    <string name="log_info">如下为测试信息</string>
    <string name="to_one_mode">单项测试模式</string>
    <string name="to_factory_mode">Device Checker</string>
    <string name="to_change_mode">切换模式</string>
    <string name="cur_version">版本号:</string>
    <string name="input_password">请输入密码:</string>
    <string name="but_ok">确定</string>
    <string name="but_cancel">取消</string>
    <string name="password_error">密码错误</string>
    <string name="touch_test">触摸屏校准</string>
    <string name="GSensor_test">加速度传感器测试</string>
    <string name="usb_test">迷你USB连接测试</string>
    <string name="sd_test">SD卡连接测试</string>
    <string name="Wifi_test">Wifi测试</string>
    <string name="close_test">挂机唤醒测试</string>
    <string name="RTC_test">RTC测试</string>
    <string name="standare_usb_test">标准USB连接测试</string>
    <string name="standard_usb_tip">请插入usb 鼠标，如果屏幕上出现光标并可以移动即为合格。</string>
    <string name="usb_test_hinta">请插入usb</string>
    <string name="usb_test_hintb">请拔出usb</string>
    <string name="usb_test_in">USB插入</string>
    <string name="usb_test_out">USB拔出</string>
    <string name="sd_test_hinta">请插入SD卡</string>
    <string name="sd_test_hintb">请拔出SD卡</string>
    <string name="sd_test_hintc">正在更新LOGO,请稍等!</string>
    <string name="sd_test_in">SD插入</string>
    <string name="sd_test_out">SD拔出</string>
    <string name="sd_test_logo_ok">LOGO更新成功</string>
    <string name="test_sd_success">SD卡测试成功,即将进入下一项测试......</string>
    <string name="headset_test_hinta">请插入耳机</string>
    <string name="headset_test_hintb">请拔出耳机</string>
    <string name="headset_test_in">耳机插入</string>
    <string name="headset_test_out">耳机拔出</string>
    <string name="mediarecord_test_hint">点开始录音进行录音\r\n点播放录音播放录音.</string>
    <string name="record_start">开始录音</string>
    <string name="record_stop">停止录制</string>
    <string name="record_play">播放录音</string>
    <string name="record_stop_play">停止播放</string>
    <string name="record_test_init_err">启动录音设备失败</string>
    <string name="record_test_recording">正在录音&#8230;</string>
    <string name="record_test_recording_stop">录音停止</string>
    <string name="record_test_Playing">正在播放&#8230;</string>
    <string name="record_test_stop_Playing">播放停止</string>
    <string name="audio_test_hinta">扬声器正常音量</string>
    <string name="audio_test_hintb">扬声器最大音量</string>
    <string name="audio_test_hintc">扬声器静音</string>
    <string name="audio_test_hintd">请插入耳机</string>
    <string name="audio_test_hinte">请拔出耳机</string>
    <string name="audio_stop">停止</string>
    <string name="audio_play">播放</string>
    <string name="audio_max_volume">测最大音量</string>
    <string name="audio_min_volume">测最小音量</string>
    <string name="audio_headphne">测耳机发音</string>
    <string name="test_audio_sd_error">SD卡读取异常</string>
    <string name="test_audio_file_error">SD卡测试音频文件不存在</string>
    <string name="test_video_file_error">SD卡测试视频文件不存在</string>
    <string name="test_record_file_error">SD卡录制音频文件不存在</string>
    <string name="sleepwake">短按开关键，将机器挂起，唤醒，观察机器电流是否在范围内。</string>
    <string name="rtcstart">开始RTC测试</string>
    <string name="rtcisrunning">正在进行rtc测试,请稍等！</string>
    <string name="rtcsucess">RTC正常</string>
    <string name="rtcerror">RTC异常</string>
    <string name="rtcnotice">点击开始RTC测试,查看提示信息</string>
    <string name="wifinotice">下面是Ap信息,点击连接连接到TTPP-LLIINNKK,请配置AP名字为TTPP-LLIINNKK,密码为 43214321,点击测试网络可以测试是否连接</string>
    <string name="wificonnect">WIFI已连接</string>
    <string name="wifidisconnect">WIFI未连接</string>
    <string name="disconnect">未连接</string>
    <string name="connectwifi">连接WIFI</string>
    <string name="disconnectwifi">断开WIFI</string>
    <string name="connectisrunning">正在WIFI连接,请稍等!</string>
    <string name="disconnectisrunning">正在断开WIFI,请稍等!</string>
    <string name="apname">AP:</string>
    <string name="mac_addr">MAC地址:</string>
    <string name="ip_addr">IP地址:</string>
    <string name="singal_speed">信号强度:</string>
    <string name="linktime">连接时间:</string>
    <string name="test_net">测试网络</string>
    <string name="test_neting">正在测试网络</string>
    <string name="browserconnect">网络连接成功</string>
    <string name="browserdisconnect">网络连接失败</string>
    <string name="connecttips">"配置AP名字为TTPP-LLIINNKK,密码为 43214321,请保证机器连接到AP为TTPP-LLIINNKK才能正常测试"</string>
    <string name="test_gsensor_hint">X\\Y\\Z 数据跳动为合格。</string>
    <string name="test_brightness_low">亮度低</string>
    <string name="test_brightness_middle">亮度中</string>
    <string name="test_brightness_height">亮度高</string>
    <string name="tstest_tips">请在触摸屏上滑动测试</string>
    <string name="btn_ok_text">合格</string>
    <string name="btn_cancel_text">不合格</string>
    <string name="check_ok">合格</string>
    <string name="check_nook">不合格</string>
    <string name="to_next">下一步</string>
    <string name="check_none">未测试</string>
    <string name="judge_result">判断该项测试结果</string>
    <string name="vedio_des">查看视频播放是否流畅.</string>
    <string name="vedio_play">开始播放</string>
    <string name="time_second">秒</string>
    <string name="test_camera">摄像头测试</string>
    <string name="test_gps">Gps测试</string>
    <string name="test_gps_prn">PRN</string>
    <string name="test_gps_snr">SNR</string>
    <string name="test_gps_notice">PRN SNR 有值为合格</string>
    <string name="test_gps_testing">正在检测Gps设备,请稍等</string>
    <string name="test_otg">Otg连接测试</string>
    <string name="test_otg_hand_in">请插入Otg设备,插入后请稍等!</string>
    <string name="test_otg_hang_out">请拔出Otg设备</string>
    <string name="test_otg_in">Otg设备已插入</string>
    <string name="test_otg_out">Otg设备已拔出</string>
    <string name="test_otg_success">Otg设备测试成功,即将进入下一项测试......</string>
    <string name="test_vibrator">振动测试</string>
    <string name="vibrator_notice">机器振动为合格</string>
    <string name="test_key">按键测试</string>
    <string name="press_key">请按下要测试的按键,测试HOME键短按会退出测试软件，长按可以唤出测试软件。</string>
    <string name="keycode_a">A</string>
    <string name="keycode_b">B</string>
    <string name="keycode_c">C</string>
    <string name="keycode_d">D</string>
    <string name="keycode_volume_down">音量减</string>
    <string name="keycode_volume_up">音量加</string>
    <string name="keycode_mute">静音</string>
    <string name="keycode_menu">Menu</string>
    <string name="keycode_back">Back</string>
    <string name="keycode_home">Home</string>
    <string name="keycode_search">搜索</string>
    <string name="test_battery">电池测试</string>
    <string name="battery_info_status_label" msgid="8109155295509700309">"电池状态："</string>
    <string name="battery_info_scale_label" msgid="3649763192389778437">"电池电量："</string>
    <string name="battery_info_status_unknown" msgid="196130600938058547">"未知"</string>
    <string name="battery_info_status_charging" msgid="1705179948350365604">"正在充电"</string>
    <string name="battery_info_status_charging_ac" msgid="5874340256342956252">"（交流电）"</string>
    <string name="battery_info_status_charging_usb" msgid="4059070156126770959">"(USB 绑定选项)"</string>
    <string name="battery_info_status_discharging" msgid="6222697503392774475">"正在放电"</string>
    <string name="battery_info_status_not_charging" msgid="2820070506621483576">"未在充电"</string>
    <string name="battery_info_status_full" msgid="2824614753861462808">"已满"</string>
    <string name="connect_service">开始连接服务器,请稍等!</string>
    <string name="download_testitem">开始更新测试项,请稍等!</string>
    <string name="wifi_error">WIFI连接失败,请检查设备是否正常</string>
    <string name="button_ok">确定</string>
    <string name="machine_invalid">验证机器合法性,请稍等!</string>
    <string name="machine_id_error">不是合法的机器</string>
    <string name="get_machine_id_no">没有取的机器ID,请连接网络</string>
    <string name="get_machine_id_yes">机器合法</string>
    <string name="get_test_item">正在取测试项,请稍等!</string>
    <string name="get_test_error">取测试项失败</string>
    <string name="get_test_suc">取测试项成功</string>
    <string name="up_machine_info">正在上传机器信息,请稍等!</string>
    <string name="up_machine_info_error">上传机器信息失败.</string>
    <string name="up_log_info">正在上传测试信息,请稍等!</string>
    <string name="up_log_info_error">上传测试信息失败.</string>
    <string name="start_active">正在激活机器,请稍等!</string>
    <string name="active_error">激活机器失败</string>
    <string name="active_suc">激活机器成功</string>
    <string name="active_confrim">正在激活确认,请稍等!</string>
    <string name="active_confrim_error">激活确认失败</string>
    <string name="active_confrim_suc">激活确认成功,请重启机器</string>
    <string name="active_agian">机器已经激活</string>
    <string name="active_voerdue">过了有效期,激活失败</string>
    <string name="no_test_item">不存在该测试项</string>
    <string name="active_machine">激活</string>
    <string name="reload_testitem">重取测试项</string>
    <string name="no_test">没有测试项,请下载测试项.</string>
    <string name="no_wan">网络连接失败,请重连网络.</string>
    <string name="link_wifi_again">重连网络</string>
    <string name="test_fail">测试未通过</string>
    <string name="can_not_active">测试未通过,不能激活</string>
    <string name="voice_control">音量大小调节</string>
    <string name="get_cpuid">存储机器序列号</string>
    <string name="please_get_cpuid">请按按钮存储机器序列号</string>
    <string name="cpuid">机器序列号:</string>
    <string name="check_status">检测状态,请稍等......</string>
    <string name="write_cpuiding">正在存储机器序列号,请稍等......</string>
    <string name="cpuid_isexist_tonext">机器序列号已经存储,即将退出,请稍等......</string>
    <string name="write_cpu_id_error">写机器序列号错误</string>
    <string name="no_cpu_id">没有机器序列号</string>
    <string name="sdcard_mounted">请插入SD卡</string>
    <string name="write_cpuid">成功存储机器序列号</string>
    <string name="cpuid_isexist">机器序列号已经存储</string>
    <string name="licensefile_create">成功存储机器序列号</string>
    <string name="licensefile_notexist">没有与此机器配对的授权文件</string>
    <string name="key_isnull">没有与此机器配对的授权文件</string>
    <string name="generate_key">授权文件已导入机器，请重启</string>
    <string name="up_test_item">正在上传测试项信息,请稍等......</string>
    <string name="wifi_disconnect">上传测试项失败,请检查网络是否连通</string>
    <string name="service_app_error">上传测试项失败,请检查服务端程序是否正常</string>
    <string name="wifi_loading">正在重连网络,请稍等......</string>
    <string name="wifi_security_open">Open</string>
</resources>