<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:gravity="center"	>
	  		
		<TextView android:id="@+id/test_color_text4"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent" 
			android:background="#ffffffff" />
			
	
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:gravity="center_horizontal|bottom" 
		android:layout_marginBottom="50px"
        >
		
		<Button android:id="@+id/but_low" 
			android:layout_width="200dp"
			android:layout_height="wrap_content" 
			android:layout_marginLeft="20dp"
			android:text="@string/test_brightness_low" />
			
		<Button android:id="@+id/but_middle" 
			android:layout_width="200dp"
			android:layout_height="wrap_content" 
			android:text="@string/test_brightness_middle"/>
			
		<Button android:id="@+id/but_height" 
			android:layout_width="200dp"
			android:layout_height="wrap_content" 
			android:layout_marginRight="20dp"
			android:text="@string/test_brightness_height" />
			
	</LinearLayout>
	
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:layout_gravity="bottom"
		android:gravity="center_horizontal|bottom"
        >
		
		<Button android:id="@+id/but_ok" 
			android:layout_width="@dimen/test_item_bottom_button_width"
			android:layout_height="wrap_content" 
			android:layout_marginLeft="@dimen/test_item_button_magin_left"
			android:text="@string/check_ok" />
			
		<Button android:id="@+id/but_nook" 
			android:layout_width="@dimen/test_item_bottom_button_width"
			android:layout_height="wrap_content" 
			android:text="@string/check_nook"/>
			
	</LinearLayout>
</FrameLayout >
