<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="#383838"
	android:orientation="vertical">
	
  <TextView
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:textSize="20sp"
   android:paddingTop="20dip"
   android:textColor="#ffff00"
   android:text="@string/test_notice"
   >
   </TextView>
     <LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"	
		android:paddingBottom="40dip"
		android:gravity="center_horizontal|bottom">
		
		<Button android:id="@+id/starttest" 
			android:layout_width="200dp"
			android:layout_height="wrap_content" 
			android:text="@string/start_test" />
						
		<Button android:id="@+id/seelog" 
			android:layout_width="200dp"
			android:layout_height="wrap_content" 
			android:text="@string/see_log" />
			
			
	</LinearLayout>
    
</LinearLayout>
