<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#383838"
    ><!--
   <TextView android:id="@+id/sleepwake"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
       			android:paddingLeft="20dip"
  				android:paddingTop="20dip"
  				android:textSize="30sp"
  				android:gravity="top"
        		android:text="@string/sleepwake"/>  
        		
        		
      -->
      
      <LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
        >
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="30dp"
        android:text="@string/test_gps_notice"
        />
      <LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:paddingLeft="200dp"
        >
        <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textSize="30dp"
        android:text="@string/test_gps_prn"
        />
        <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textSize="22dp"
        android:text="@string/test_gps_snr"
        />
        
        </LinearLayout>
         <GridView android:layout_width="fill_parent"   
          android:layout_height="300dp"
          android:paddingLeft="200dp"   
          android:id="@+id/gpsinfo"
          android:scrollbars="none"		  
		  />     
         </LinearLayout>
      
     
      
      <LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:layout_gravity="bottom"
		android:gravity="bottom" 
        >
		
			<Button android:id="@+id/but_nook" 
			android:layout_width="200dp"
			android:layout_height="100dp" 
			android:text="@string/check_nook"
			android:textSize="30dp"
			android:background="@color/red"
			android:gravity="center"/>
		
		<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="right"
        >	
		<Button android:id="@+id/but_ok" 
			android:layout_width="200dp"
			android:layout_height="100dp" 
			android:text="@string/check_ok"	
			android:textSize="30dp"
			android:background="@color/green"
			android:gravity="center" />
		</LinearLayout>	
	
			
	</LinearLayout>
</FrameLayout>
