<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="#383838"
	android:orientation="vertical">
	 <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:paddingLeft="@dimen/test_item_padding_left"
  android:paddingTop="@dimen/test_item_padding_top"
  android:textSize="@dimen/test_item_tips_text_size"
  android:gravity="top"
  android:textColor="#ffff00"
  android:text="@string/mediarecord_test_hint">
  </TextView>
 
		
  <TextView
   android:layout_width="fill_parent"
   android:id="@+id/hint_text" 
   android:layout_height="wrap_content"
   android:textSize="@dimen/test_item_tips_text_size"
   android:paddingTop="@dimen/test_item_padding_top"
    android:gravity="center"
   android:textColor="#ffff00"
   >
   </TextView>
   
    <SeekBar   
        android:id="@+id/seekBar"   
        android:layout_height="wrap_content"   
        android:layout_width="fill_parent"
        android:visibility="gone"/>   
  
   
  <LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="@dimen/test_item_button_height"
		android:paddingBottom="@dimen/test_item_button_paddingBottom"
		android:gravity="center_horizontal|bottom">
		
		<Button android:id="@+id/record_but_start_record" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/record_start"
			android:textSize="@dimen/test_item_button_text_size"/><!--
			
		<Button android:id="@+id/record_but_stop_record" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/record_stop"
			android:textSize="30dp" />
			
			--><Button android:id="@+id/record_but_play" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/record_play"
			android:textSize="@dimen/test_item_button_text_size" /><!--
			
			<Button android:id="@+id/record_but_stop_play" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/record_stop_play"
			android:textSize="30dp" />
	--></LinearLayout>
	
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:layout_gravity="bottom"
		android:gravity="bottom" 
        >
		
			<Button android:id="@+id/but_nook" 
			android:layout_width="@dimen/test_item_bottom_button_width"
			android:layout_height="@dimen/test_item_bottom_button_heith"
			android:text="@string/check_nook"
			android:textSize="@dimen/test_item_tips_text_size"
			android:background="@color/red"
			android:gravity="center"/>
		
		<LinearLayout 
		android:orientation="vertical"
		android:layout_width="@dimen/test_item_bottom_button_width"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/test_item_button_magin_left"
        >	
         <TextView
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:textSize="@dimen/test_item_tips_text_size"
   		android:text="@string/voice_control"
   		android:textColor="@color/yellow"
   		>
  		 </TextView>
		<SeekBar   
        android:id="@+id/seekBarvol"   
        android:layout_height="wrap_content"   
        android:layout_width="fill_parent"/>
        </LinearLayout>
		
		<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="right"
        >	
		<Button android:id="@+id/but_ok" 
			android:layout_width="@dimen/test_item_bottom_button_width"
			android:layout_height="@dimen/test_item_bottom_button_heith"
			android:text="@string/check_ok"
			android:textSize="@dimen/test_item_tips_text_size"
			android:background="@color/green" 
			android:gravity="center" />
		</LinearLayout>	
			
	
			
	</LinearLayout>
  
</LinearLayout>
