<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#383838"
    >
    				
    <TextView
        android:id="@+id/test_nfc_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:paddingLeft="@dimen/test_item_padding_left"
        android:paddingTop="@dimen/test_item_padding_top"
        android:text="@string/test_nfc_tips"
        android:textColor="#ffff00"
        android:textSize="@dimen/test_item_tips_text_size" >

  </TextView>
  
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:layout_gravity="bottom"
		android:gravity="bottom"
        >
			
		<Button android:id="@+id/but_nook" 
			android:layout_width="@dimen/test_item_bottom_button_width2"
			android:layout_height="@dimen/test_item_bottom_button_heith"
			android:text="@string/check_nook"
			android:textSize="@dimen/test_item_tips_text_size"
			android:background="@color/red"
			android:gravity="center"/>
			
		<LinearLayout 
		android:orientation="vertical"
		android:layout_width="@dimen/test_item_bottom_button_width2"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/test_item_button_magin_left"
        >	
		<Button android:id="@+id/but_open_nfc" 
			android:layout_width="@dimen/test_item_bottom_button_width2"
			android:layout_height="@dimen/test_item_bottom_button_heith"
			android:text="@string/open_nfc" 
			android:textSize="@dimen/test_item_tips_text_size"
			android:background="@color/yellow"
			android:gravity="center"/>
		</LinearLayout>
			<LinearLayout 
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="right"
	        >	
			<Button android:id="@+id/but_ok" 
				android:layout_width="@dimen/test_item_bottom_button_width2"
				android:layout_height="@dimen/test_item_bottom_button_heith"
				android:text="@string/check_ok" 
				android:textSize="@dimen/test_item_tips_text_size"
				android:background="@color/green"
				android:gravity="center"/>
			
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
