<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#383838">

    <SurfaceView android:id="@+id/surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    </SurfaceView>
  
  <LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:layout_gravity="bottom"
		android:gravity="bottom"
        >
			
		<Button android:id="@+id/but_nook" 
			android:layout_width="@dimen/test_item_bottom_button_width"
			android:layout_height="@dimen/test_item_bottom_button_heith"
			android:text="@string/check_nook"
			android:textSize="@dimen/test_item_tips_text_size"
			android:background="@color/red"
			android:gravity="center"/>
		
		<LinearLayout 
		android:orientation="vertical"
		android:layout_width="@dimen/test_item_bottom_button_width"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/test_item_button_magin_left"
        >	
         <TextView
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:textSize="@dimen/test_item_tips_text_size"
   		android:text="@string/voice_control"
   		android:textColor="@color/yellow"
   		>
  		 </TextView>
		<SeekBar   
        android:id="@+id/seekBar"   
        android:layout_height="wrap_content"   
        android:layout_width="fill_parent"/>
        </LinearLayout>
			
	    <LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="right"
        >	
		<Button android:id="@+id/but_ok" 
			android:layout_width="@dimen/test_item_bottom_button_width"
			android:layout_height="@dimen/test_item_bottom_button_heith"
			android:text="@string/check_ok"
			android:textSize="@dimen/test_item_tips_text_size"
			android:background="@color/green" 
			android:gravity="center" />
	</LinearLayout>		
	</LinearLayout>
  
</FrameLayout>